clusters/managed/gaming/pterodactyl-wings/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app pterodactyl-wings
  annotations:
    secret.reloader.stakater.com/reload: pterodactyl-wings-config
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      milano.app: *app
  template:
    metadata:
      labels:
        milano.app: *app
    spec:
      containers:
        - name: wings
          # renovate: depName=ghcr.io/pterodactyl/wings
          image: ghcr.io/pterodactyl/wings:latest
          ports:
            - name: api
              containerPort: 8080
            - name: sftp
              containerPort: 2022
            - name: mc
              containerPort: 6901
              protocol: TCP
          securityContext:
            privileged: true
          volumeMounts:
            - name: config
              mountPath: /etc/pterodactyl
            - name: volumes
              mountPath: /var/lib/pterodactyl/volumes
              mountPropagation: Bidirectional
            - name: dockerlib
              mountPath: /var/lib/docker
            - name: tmp
              mountPath: /tmp/pterodactyl
            - name: run
              mountPath: /run/wings
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 30
            periodSeconds: 2
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 4Gi
        - name: dind
          image: docker:29-dind
          args:
            - --host=tcp://0.0.0.0:2375
            - --tls=false
            - --mtu=1400
            - --dns=1.1.1.1
            - --dns=8.8.8.8
          securityContext:
            privileged: true
          volumeMounts:
            - name: dockerlib
              mountPath: /var/lib/docker
            - name: volumes
              mountPath: /var/lib/pterodactyl/volumes
              mountPropagation: Bidirectional
            - name: tmp
              mountPath: /tmp/pterodactyl
            - name: run
              mountPath: /run/wings
      volumes:
        - name: config
          secret:
            secretName: pterodactyl-wings-config
        - name: volumes
          persistentVolumeClaim:
            claimName: pterodactyl-wings-pvc
        - name: minecraft-settings
          configMap:
            name: pterodactyl-minecraft-settings
        - name: dockerlib
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: run
          emptyDir: {}
