clusters/managed/gaming/pterodactyl-wings/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app pterodactyl-wings
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 8080
      targetPort: 8080
    - name: sftp
      port: 2022
      targetPort: 2022
  selector:
    milano.app: *app
