clusters/managed/gaming/pterodactyl-wings/service-game.yaml
apiVersion: v1
kind: Service
metadata:
  name: &app pterodactyl-wings-game
  labels:
    milano.app: pterodactyl-wings
    milano.level: managed
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - name: mc-tcp
      port: 6901
      targetPort: 6901
      nodePort: 30901
      protocol: TCP
    - name: bedrock-udp
      port: 6901
      targetPort: 6901
      nodePort: 30902
      protocol: UDP
  selector:
    milano.app: pterodactyl-wings
