clusters/managed/gaming/pterodactyl-wings/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app pterodactyl-wings
  labels:
    milano.level: managed
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`wings.trusted.nirmalhk7.com`)
      kind: Rule
      services:
        - name: *app
          port: 8080
  tls:
    secretName: pterodactyl-wings-tls
